--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -26,19 +26,19 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat center center;
+    background: url(../img/background.jpg) no-repeat center center;
     background-size: cover;
 }
 
 .intro-message {
     position: relative;
-    padding-top: 20%;
+    padding-top: 8%;
     padding-bottom: 20%;
 }
 
 .intro-message > h1 {
     margin: 0;
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
+    text-shadow: 9px 2px 3px rgba(0, 0, 0, 1);
     font-size: 5em;
 }
 
@@ -49,7 +49,7 @@ h6 {
 }
 
 .intro-message > h3 {
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
+    text-shadow: 12px 2px 3px rgba(0, 0, 10, 1);
 }
 
 @media(max-width:767px) {
@@ -153,3 +153,4 @@ footer {
 p.copyright {
     margin: 15px 0 0;
 }
+
